--- a/res/css/nav.css
+++ b/res/css/nav.css
@@ -60,3 +60,75 @@ nav a {
     text-decoration: none;
     color: var(--white);
 }
+
+nav {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "nav_main"
+        "nav_settings";
+}
+
+nav>div {
+    padding: 0.5rem;
+}
+
+.nav_main {
+    grid-area: nav_main;
+}
+
+.nav_settings {
+    grid-area: nav_settings;
+    border-top: 1px solid var(--gray);
+}
+
+.nav_entry {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 1fr;
+    grid-auto-columns: 1fr;
+    grid-auto-rows: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "nav_entry_icon nav_entry_text";
+    height: fit-content;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    background-color: var(--gray);
+    border-radius: 0.5rem;
+    outline: 0px solid var(--primaryColor);
+    transition: 0.1s;
+}
+
+.nav_entry_icon {
+    grid-area: nav_entry_icon;
+    display: grid;
+    place-items: center;
+}
+
+.nav_entry_icon svg {
+    width: 2rem;
+    height: 2rem;
+}
+
+.nav_entry_text {
+    grid-area: nav_entry_text;
+    display: grid;
+    place-items: center;
+    font-size: var(--subheadingSize);
+}
+
+.nav_active {
+    background-color: var(--primaryColor);
+    border: 1px solid var(--primaryColor);
+    color: var(--black);
+}
+
+.nav_entry:hover {
+    outline: 1px solid var(--primaryColor);
+    transform: scale(1.025);
+}
