--- a/settings/settings.css
+++ b/settings/settings.css
@@ -1,3 +1,7 @@
+main {
+    overflow: scroll;
+}
+
 .category_container {
     background-color: var(--gray);
     margin: 1rem;
@@ -13,4 +17,71 @@ a {
     color: var(--primaryColor);
     font-weight: bold;
     text-decoration: none;
+}
+
+/* 
+Password change
+*/
+
+form {
+    position: relative;
+}
+
+.input-container {
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.input-container input {
+    background-color: transparent;
+    height: 2rem;
+    width: 40%;
+    border-radius: 0.5rem;
+    border: 2px solid var(--white);
+    color: var(--white);
+    padding: 0.5rem;
+    outline: 0;
+}
+
+.input-container .input-tooltip {
+    position: absolute;
+    font-size: 17px;
+    top: 15.5px;
+    left: 0.5rem;
+    user-select: none;
+    background-color: var(--gray);
+    color: var(--white);
+    transition: 0.2s;
+    padding: 0 0.25rem;
+    pointer-events: none;
+}
+
+input:focus~.input-tooltip,
+input:not(:placeholder-shown)~.input-tooltip {
+    transform: translate(-8%, -26px) scale(0.8);
+}
+
+input:focus~.input-tooltip {
+    color: var(--white);
+}
+
+.input-container input:active,
+.input-container input:focus {
+    border: 2px solid var(--white);
+}
+
+#submit_button {
+    border-radius: 0.5rem;
+    padding: 1rem;
+    background-color: var(--secondaryColor);
+    color: var(--white);
+    border: 0;
+    width: calc(40% + 1rem);
+    cursor: pointer;
+    font-size: 1rem;
+    translate: 1s;
+}
+
+#submit_button:hover {
+    transform: scale(1.025);
 }
